<?xml version="1.0"?>
<package>
  <name>cnr_velocity_to_torque_controller</name>
  <version>0.0.0</version>
  <description>The cnr_velocity_to_torque_controller package</description>

  <maintainer email="iras@stiima.cnr.it">maxwell</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cnr_controller_interface</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>state_space_controllers</build_depend>
  <build_depend>state_space_ros</build_depend>
  <build_depend>subscription_notifier</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>pluginlib</run_depend>
  <run_depend>cnr_controller_interface</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>state_space_controllers</run_depend>
  <run_depend>state_space_ros</run_depend>
  <run_depend>subscription_notifier</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
		<controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
