<?xml version="1.0"?>
<package format="2">
  <name>cnr_simple_touch_controller</name>
  <version>0.0.0</version>
  <description>The cnr_simple_touch_controller package</description>

  <maintainer email="manuel.beschi@stiima.cnr.it">Manuel Beschi</maintainer>
  <license>BSD</license>

   <author email="paolo.franceschi@stiima.cnr.it">Paolo Franceschi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cnr_hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosdyn_core</build_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>cnr_hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosdyn_core</build_export_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cnr_hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosdyn_core</exec_depend>

  <depend>subscription_notifier       </depend>
  <depend>actionlib                   </depend>
  <depend>simple_touch_controller_msgs</depend>
  <depend>actionlib_msgs              </depend>
  <depend>tf_conversions              </depend>
  
                                                      
  <export>
  <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
